@@ -196,6 +196,11 @@ class IO::Socket extends IO::Handle {
   
   method recv : int ($buffer : mutable string, $length : int = -1, $flags : int = 0, $buf_offset : int = 0) {
     
+    return $self->recvfrom($buffer, $length, $flags, undef, $buf_offset);
+  }
+  
+  method recvfrom : int ($buffer : mutable string, $length : int, $flags : int, $from : Sys::Socket::Sockaddr, $buf_offset : int = 0) {
+    
     if ($length < 0) {
       $length = length $buffer;
     }
@@ -205,7 +210,7 @@ class IO::Socket extends IO::Handle {
     my $fd = $self->{FD};
     my $recv_length = -1;
     while (1) {
-      eval { $recv_length = Sys->recv($fd, $buffer, $length, $flags, $buf_offset); }
+      eval { $recv_length = Sys->recvfrom($fd, $buffer, $length, $flags, $from, $buf_offset); }
       
       if ($@) {
         if (Sys::Socket::Errno->errno == Sys::Socket::Errno->EWOULDBLOCK || Sys::Socket::Errno->errno == Errno->EINTR) {
